# yutc

./: .editorconfig  .gitignore  .gitmodules  .golangci.yaml  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  Taskfile.yaml  config-spec.yaml  go.mod  go.sum
.github/workflows/: release.yaml  render-docs.yaml  test.yaml
cmd/lexer-debug/: main.go  main_test.go
cmd/yutc/: common.go  examples_test.go  forEach.go  main.go  root.go  root_test.go  template.go  yutc.go  yutc_test.go
docs/: README.data.yaml  README.md.tmpl  diagram.py
docs/_data/: README.data.yaml
docs/_templates/: README.md.tmpl
examples/docker-compose-multi-env/: .gitignore  README.md
examples/simple-helm/: mock-server.toml
examples/uv-python-project/: README.md  data.yaml
examples/uv-python-project/src/: pyproject.toml
examples/uv-python-project/src/{{.project_name}}/: __init__.py
internal/: app.go  archive.go  args.go  args_test.go  data.go  data_test.go  errors.go  files.go  files_test.go  flags.go  flags_test.go  funcMap.go  http.go  logging.go  set.go  template.go  treeWalker.go  types.go  util.go  version.go  walkTree.go  web_test.go  xFlags.go
internal/config/: args.go  args_test.go
internal/data/: data.go
internal/files/: archive.go  files.go  files_test.go  http.go  walkTree.go  web_test.go
pkg/: app.go  customFunctions.go  helmish.go  helmish_test.go  template.go  version.go
scripts/: bump_version.sh
testFiles/: ls-like.tmpl  yamlOpts.tmpl
testFiles/poetry-init/from-dir/: pyproject.toml
tests/: data.yaml  template1.tmpl  template2.tmpl
(+144 files in other folders)
